css/main.css
@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|KoHo|Merienda');

:root {
  --background-white: rgba(191, 184, 208, 0.5);
  --background-purple: rgb(109, 80, 152);
  --dark-purple: rgba(29, 21, 47, 0.9);
  --opaque-white: rgba(254, 254, 254, 0.68);
  --purple: rgba(123, 60, 173, 0.75);
  --teal:rgb(46, 134, 105) ;
}


body {
  background-image: url('images/fibonacci.jpg');
  background-size: cover;
  background-position: center sticky;
  /* background-repeat: no-repeat; */
  display: flex;
  align-items: stretch;
  flex-direction: column;
  margin: 0;
  color: white;
  font-family: "Merienda";
  text-align: center;

}

/* Main Projects Page */

.header {
  background-color: var(--background-white);
  position: absolute;
  z-index: 2;
  top: 0;
  height: 20%;
  width: 100%;
  margin: 0;
}

h1 {
  font-size: 3em;
  margin: 0;
}

h2 {
  font-size: 2em;
  margin: 0;
}

.main_container {
  margin: 0;
  height: 100%;
  width: 100%;

}


/* Bubbles */
.bubbles {
  margin-top: 20%;
  padding: 0 50px;
  height: inherit;

  display: flex;
  justify-content: space-between;
}

.bubble {
  width: 400px;
  height: 400px;
  background-color: var(--opaque-white);
  border-radius: 360px;
  /* padding: 90px; */
  align-items: center;
  text-align: center;
  margin: 10px;

}

.bubbleItems {
  margin-top: 20px;
  height: 80%;

}

.bubbleTitle {
  color: var(--teal);
  /* font-size: 2em; */
}

.bubbleImg {
  width: 60%;

  margin: 10px;
  border: 10px solid var(--purple);
  border-radius: 360px;
  cursor: pointer;
}



.bubbleImg:hover {
  border: solid 10px var(--purple);
  animation:
}

#imgTicTacToe {
  transform: rotate(90deg);
  width: 206px;
  height: 280px;
  border: 10px solid var(--dark-purple);
  cursor: pointer;
  margin-top: -40px;
}

.iconlink {
  width: 50px;
}

.emailLink {
  text-decoration: none;
}

/* Footer */

.footer {
  background-color: var(--background-purple);
  /* background-image: url('images/fibonacci.jpg'); */
  position: sticky;
  z-index: 2;
  bottom: 0;
  height: 15%;
  width: 100%;
}


.footerNav {
	display: flex;
	justify-content: space-between;
	padding: 20px 60px;
  width: 100%;
  margin: auto;
}

#linkedInImg {
	border: none;
	width: 30px;
	height: 30px;
  border: solid 3px var(--dark-purple)
}

#linkedInImg:hover {
  cursor: pointer;
  border: solid 3px var(--opaque-white);
  border-radius: 360px;

}

.footerLinks {
  text-decoration: none;
  color: white;
  padding: 10px;
  border-radius: 360px;

  font-size: 2em;
}

.footerLinks:hover {
  background: var(--purple);
  border-radius: 360px;
  padding: 10px;
}

/*  About Me Page */

p {
  padding: 0 25px;
}

ul {
  padding: none;
  text-align: center;
}

li {
  list-style: none;
  /* margin-left: 170px; */
  margin-right: 50px;
}





/*  */

